GNOME Bugzilla – Bug 608256
typo: s/signin/signing
Last modified: 2010-01-28 18:05:23 UTC
Created attachment 152405 [details] [review] fix typo in daemon/seahorse-service-crypto.c in daemon/seahorse-service-crypto.c - g_set_error (error, SEAHORSE_DBUS_ERROR, SEAHORSE_DBUS_ERROR_INVALID, _("Error openin clearuri")); + g_set_error (error, SEAHORSE_DBUS_ERROR, SEAHORSE_DBUS_ERROR_INVALID, _("Error opening clearuri"));
Committed, thanks! commit 16b5de56416f64f2f3a65ed7ec965bb783eda7c9 Author: Christian Kirbach <Christian.Kirbach@googlemail.com> Date: Thu Jan 28 19:03:36 2010 +0100 Fixed typo in daemon/seahorse-service-crypto.c https://bugzilla.gnome.org/show_bug.cgi?id=608256