Fixed typo in daemon/seahorse-service-crypto.c

https://bugzilla.gnome.org/show_bug.cgi?id=608256